--- a/src/app/component/home/home.component.html
+++ b/src/app/component/home/home.component.html
@@ -5,7 +5,7 @@
     <div class="container scroll-section">
         <h1 style="text-align: center;">I'M A <br> <span style="color: #8752dd;">JUNIOR WEB DEVELOPER</span> <br> BASED IN TURIN, ITALY.</h1>
         <p style="margin-top: 20px; text-align: center;">
-          with a background as a Full Stack Web Developer with skills in both frontend and backend.
+          With a background as a Full Stack Web Developer with skills in both frontend and backend.
         </p>
         <div class="btn-container">
           <button type="button" class="btn btn-custom" onclick="location.href='#scopri'">Scopri di più</button>
