--- a/src/app/component/navbar/navbar.component.html
+++ b/src/app/component/navbar/navbar.component.html
@@ -2,12 +2,12 @@
   <div class="container-fluid">
     <!-- Navbar content -->
     <div class="d-flex justify-content-between align-items-center w-100">
-          <!-- Logo a sinistra -->
-    <a class="navbar-brand" href="/home">
-      <img src="../../../assets/logomdm.svg" alt="Logo" style="width: 70px;">
-    </a>
+      <!-- Logo a sinistra -->
+      <a class="navbar-brand" href="/home">
+        <img src="../../../assets/logomdm.svg" alt="Logo">
+      </a>
       <!-- Icone LinkedIn e GitHub al centro -->
-      <div class="d-flex justify-content-center flex-grow-1">
+      <div class="navbar-nav d-flex flex-grow-1 justify-content-center">
         <a class="nav-link" href="https://github.com/MassimilianoDallaMura?tab=repositories" target="_blank">
           <i class="bi bi-github"></i>
         </a>
@@ -16,8 +16,8 @@
         </a>
       </div>
       <!-- Pulsante Contacts a destra -->
-      <button class="btn btn-custom">
-        <a href="/contacts" class="text-white text-decoration-none">Contacts</a>
+      <button class="btn btn-custom-static">
+        <a href="/contacts" class="text-decoration-none">Contacts</a>
       </button>
     </div>
   </div>
