--- a/src/app/component/works/works.component.scss
+++ b/src/app/component/works/works.component.scss
@@ -3,10 +3,6 @@
 }
 
 
-
-
-
-
 .title {
     color: #8752dd;
 }
@@ -233,7 +229,7 @@ video {
 }
 
 .project-menu-item:hover {
-  background-color: #f8f9fa;
+  background-color: #04E762;
 }
 
 .project-menu-img {
@@ -266,8 +262,6 @@ video {
 .btn-arrow:hover {
   color: #028A4F; /* Colore della freccia al passaggio del mouse */
 }
-
-
 
 
   /* Mobile */
