--- a/src/app/component/home/home.component.scss
+++ b/src/app/component/home/home.component.scss
@@ -11,7 +11,6 @@ body {
     margin: 100px;
   }
 
-
   
   /* Contenitore principale */
   .container {
@@ -22,7 +21,6 @@ body {
     height: 100vh;
     text-align: start;
   }
-  
   
   
   /* Sezione degli studi e dei linguaggi */
@@ -106,81 +104,7 @@ body {
 }
 
   
-  /* Media query per dispositivi mobili */
-  @media (max-width: 768px) {
 
-    #home {
-      margin: 20px;
-    }
-
-    #studies {
-      margin-top: 100px;
-    }
-  
-    h1 {
-      font-size: 10vw; /* Riduce la dimensione del font per schermi più piccoli */
-      margin: 0;
-    }
-  
-    p {
-      font-size: 4vw; /* Riduce la dimensione del font per schermi più piccoli */
-      margin: 0;
-    }
-  
-    .studies h2, .languages h2, .works h2, .studies p, .languages h3, .works p {
-      
-      margin: 0; /* Rimuove il margine sinistro per schermi piccoli */
-    }
-  
-
-    h1 {
-      font-size: 30px;
-    }
-
-    h2{
-      font-size: 24px;
-    }
-
-    h3 {
-      font-size: 18px;
-    }
-
-    p {
-      font-size: 20px;
-    }
-
-
-    #studies img {
-     margin: 0;
-     margin-bottom: 30px;
-      width: 30% ; /* Imposta la larghezza dell'immagine al 100% */
-      max-width: 100%; /* Assicura che non superi il contenitore */
-    }
-
-    #studies2 img {
-      width: 100% ; /* Imposta la larghezza dell'immagine al 100% */
-      max-width: 100%; /* Assicura che non superi il contenitore */
-    }
-    
-  
-    .icon {
-      width: 100%; /* Adatta l'icona alla larghezza della colonna */
-      padding: 10px;
-      margin: 0;
-      border-radius: 8px; /* Arrotonda gli angoli dell'icona */
-    
-    }
-  
-    .scopri {
-      margin: 0;
-      text-align: start; 
-      padding: 0;
-    }
-
-    button {
-      text-align: center;
-    }
-  }
   
   /* Contenitore per la sezione lavori */
   #works {
@@ -216,11 +140,6 @@ body {
   }
   
   
-  
-  
-  
-  
-  
   @keyframes bounce {
     0%, 20%, 50%, 80%, 100% {
       transform: translateY(0);
@@ -250,6 +169,81 @@ body {
     color: #fff;
     animation: bounce 0.5s; /* Faster bounce on hover */
   }
+
+
+  /* Media query per dispositivi mobili */
+  @media (max-width: 768px) {
+
+    #home {
+      margin: 15px;
+    }
+
+    #studies {
+      margin-top: 100px;
+    }
   
+
+    #studies img {
+     margin: 0;
+     margin-bottom: 30px;
+      width: 30% ; /* Imposta la larghezza dell'immagine al 100% */
+      max-width: 100%; /* Assicura che non superi il contenitore */
+    }
+
+    #studies2 img {
+      width: 100% ; /* Imposta la larghezza dell'immagine al 100% */
+      max-width: 100%; /* Assicura che non superi il contenitore */
+    }
+    
   
+    .icon {
+      width: 100%; /* Adatta l'icona alla larghezza della colonna */
+      padding: 10px;
+      margin: 0;
+      border-radius: 8px; /* Arrotonda gli angoli dell'icona */
+    
+    }
   
+    .scopri {
+      margin: 0;
+      text-align: start; 
+      padding: 0;
+    }
+
+    button {
+      text-align: center;
+    }
+
+    h1 {
+      font-size: 8vw; /* Riduce la dimensione del font per schermi più piccoli */
+      margin: 0;
+    }
+  
+    p {
+      font-size: 4vw; /* Riduce la dimensione del font per schermi più piccoli */
+      margin: 0;
+    }
+  
+    #studies h2, #biography p {
+      
+      margin: 0; /* Rimuove il margine sinistro per schermi piccoli */
+    }
+ 
+
+    h2{
+      font-size: 24px;
+    }
+
+    h3 {
+      font-size: 18px;
+    }
+  .video-container {
+    width: 100%;
+    max-width: 100%;
+  }
+
+  video {
+    width: 100%;
+    height: auto;
+  }
+}
