--- a/src/app/component/navbar/navbar.component.scss
+++ b/src/app/component/navbar/navbar.component.scss
@@ -1,7 +1,7 @@
 /* Navbar */
 .navbar {
   background-color: var(--navbar-background-color); /* Usa la variabile per il colore del tema */
-  padding: 1rem;
+  padding: 0.5px;
   position: fixed; /* Fissa la navbar in alto */
   top: 0;
   left: 0;
@@ -15,13 +15,14 @@ body {
 }
 
 .navbar-brand img {
-  width: 40px;
+  width: 60px;
 }
 
 .navbar-nav {
   display: flex;
   align-items: center;
   justify-content: center; /* Centra gli elementi della navbar */
+  flex-grow: 1; /* Permette alla navbar di espandersi */
 }
 
 .navbar-nav .nav-link {
@@ -30,35 +31,15 @@ body {
   margin: 0 20px; /* Spazio tra le icone (aumentato) */
 }
 
-
-/* Styling for the project menu */
-.project-menu {
-  margin-bottom: 80px;
+/* Pulsante Contacts */
+.btn-custom-static {
+  font-size: 10px;
+  color: #04E762;
+  background-color: transparent;
+  border: 2px solid #04E762;
 }
 
-.project-menu-item {
-  display: flex;
-  align-items: center;
-  padding: 10px;
-  border-bottom: 1px solid #ddd;
-  cursor: pointer;
-  transition: background-color 0.3s;
-}
-
-
-/* Stile comune per i pulsanti */
-.btn-custom {
-  background-color: transparent; /* Sfondo trasparente */
-  border: 2px solid #04E762; /* Bordo di colore #04E762 */
-  color: #04E762; /* Colore del testo */
-  font-weight: bold; /* Testo in grassetto */
-  border-radius: 8px; /* Angoli arrotondati */
-  padding: 10px 20px; /* Padding per dimensionare il pulsante */
-  text-transform: uppercase; /* Testo tutto maiuscolo */
-  transition: background-color 0.3s, color 0.3s; /* Transizione per effetto hover */
-}
-
-.btn-custom:hover {
+.btn-custom-static:hover {
   background-color: #04E762; /* Colore di sfondo al passaggio del mouse */
   color: #fff; /* Colore del testo al passaggio del mouse */
 }
@@ -68,7 +49,7 @@ body {
   .navbar-nav {
     flex-direction: row;
     justify-content: center; /* Mantiene gli elementi centrati */
-    width: 50%;
+    width: 100%; /* Occupare tutta la larghezza */
   }
 
   .navbar-nav .nav-link {
@@ -76,9 +57,9 @@ body {
     margin: 0 10px; /* Riduce il margine tra le icone */
   }
 
-  .btn-custom {
+  .btn-custom-static {
     padding: 8px 15px; /* Riduce il padding per il pulsante */
-    font-size: 0.5rem; /* Riduce la dimensione del testo del pulsante */
+    font-size: 0.8rem; /* Riduce la dimensione del testo del pulsante */
   }
 }
 
@@ -86,7 +67,7 @@ body {
 @media (min-width: 768px) and (max-width: 991px) {
   .navbar-nav {
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: space-between; /* Distribuisce gli elementi con spazio tra di loro */
     width: 50%;
   }
 
@@ -95,7 +76,11 @@ body {
     margin: 0 15px; /* Spazio tra le icone */
   }
 
-  .btn-custom {
+  .btn-custom-static {
     margin-left: 10px;
+  }
+
+  .navbar-brand img {
+    width: 50px; /* Riduce la larghezza del logo sui tablet */
   }
 }
