--- a/src/app/component/sidebar/sidebar.component.scss
+++ b/src/app/component/sidebar/sidebar.component.scss
@@ -11,36 +11,36 @@
   }
   
   /* Sidebar */
-  .sidebar {
-    position: fixed;
-    top: 100px;
-    left: 16px;
-    width: 250px;
-    height: 80vh;
-    border: 1px solid var(--border-color);
-    border-radius: 4px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    padding: 5px;
-    background: transparent;
-    backdrop-filter: blur(10px);
-    overflow-y: auto;
-    transition: transform 0.3s ease;
-    cursor: grab;
-    z-index: 1000;
-  }
-  
-  .sidebar.closed {
-    transform: translateX(-200px);
-  }
-  
-  .sidebar:active {
-    cursor: grabbing;
-  }
+.sidebar {
+  position: fixed;
+  top: 100px;
+  left: 16px;
+  width: 300px;
+  height: 800px;
+  border: 1px solid var(--border-color);
+  border-radius: 4px;
+  padding: 5px;
+  background: transparent;
+  backdrop-filter: blur(10px);
+  overflow-y: auto;
+  transition: transform 0.3s ease;
+  cursor: grab;
+  z-index: 1000;
+}
+
+.sidebar.closed {
+  transform: translateX(-100%); /* Sposta completamente la sidebar fuori dallo schermo */
+}
+
+.sidebar:active {
+  cursor: grabbing;
+}
+
   
   .sidebar .menu {
     list-style: none;
     padding: 0;
-    margin: 25vh 0 0 0;
+    margin: 15vh 0 0 0;
     display: flex;
     flex-direction: column;
   }
