--- a/src/app/component/sidebar/sidebar.component.html
+++ b/src/app/component/sidebar/sidebar.component.html
@@ -4,13 +4,15 @@
   <div class="sidebar-logo">
     <img src="../../../assets/foto dalla mura-min.jpg" alt="Logo" width="100%" style="border-radius: 4px;">
   </div>
+  <div class="menu">
 
-  <ul class="menu">
-    <li><a routerLink="/works">Portfolio</a></li>
-    <li><a routerLink="/bio">About me</a></li>
-    <li><a routerLink="/contacts">Contacts</a></li>
-    <li><a routerLink="/cv">Download CV</a></li>
-  </ul>
+      <li><a routerLink="/works">Portfolio</a></li>
+      <li><a routerLink="/bio">About me</a></li>
+      <li><a routerLink="/contacts">Contacts</a></li>
+      <li><a routerLink="/cv">Download CV</a></li>
+
+  </div>
+
 </div>
 
 <!-- Pulsante Esplora -->
