--- a/src/app/component/sidebar/sidebar.component.scss
+++ b/src/app/component/sidebar/sidebar.component.scss
@@ -1,16 +1,16 @@
 /* Overlay */
 .overlay {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: rgba(0, 0, 0, 0.87); /* Colore semi-trasparente per scurire lo sfondo */
-    display: block; /* Mostra l'overlay per default */
-    z-index: 999;
-  }
-  
-  /* Sidebar */
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.87); /* Colore semi-trasparente per scurire lo sfondo */
+  display: block;
+  z-index: 999;
+}
+
+/* Sidebar */
 .sidebar {
   position: fixed;
   top: 100px;
@@ -22,99 +22,110 @@
   padding: 5px;
   background: transparent;
   backdrop-filter: blur(10px);
-  overflow-y: auto;
+  display: flex;
+  flex-direction: column;
   transition: transform 0.3s ease;
   cursor: grab;
   z-index: 1000;
 }
 
 .sidebar.closed {
-  transform: translateX(-100%); /* Sposta completamente la sidebar fuori dallo schermo */
+  transform: translateX(-100%);
 }
 
 .sidebar:active {
   cursor: grabbing;
 }
 
-  
-  .sidebar .menu {
-    list-style: none;
-    padding: 0;
-    margin: 15vh 0 0 0;
-    display: flex;
-    flex-direction: column;
-  }
-  
-  .sidebar .menu li {
-    margin-bottom: 10px;
-  }
-  
-  .sidebar .menu a {
-    display: block;
-    padding: 10px 20px;
-    border: 2px solid var(--border-color);
-    background-color: rgba(0, 128, 0, 0.7);
-    border-radius: 8px;
-    color: var(--text-color);
-    font-weight: bold;
-    text-decoration: none;
-    transition: background-color 0.3s, color 0.3s;
-  }
-  
-  .sidebar .menu a:hover {
-    background-color: rgba(0, 128, 0, 0.9);
-    color: #fff;
-  }
-  
-  /* Pulsante Esplora */
-  .explore-btn {
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    display: block; /* Mostra il pulsante di default */
-    z-index: 1500; /* Assicurati che sia sopra la sidebar e l'overlay */
-  }
-  
-  .explore-btn button {
-    width: 300px;
-    height: 100px;
-    padding: 15px 30px; /* Aumenta la dimensione del padding per un pulsante più grande */
-    font-size: 18px; /* Aumenta la dimensione del font per il testo del pulsante */
-    background-color: #8752ddb0; /* Colore di sfondo con trasparenza (rgba) */
-    border: 2px solid #8752dd; /* Bordo solido del pulsante con colore specificato */
-    color: #fff; /* Colore del testo del pulsante */
-    border-radius: 8px; /* Arrotonda gli angoli del pulsante */
-    font-weight: bold; /* Rende il testo del pulsante in grassetto */
-    text-transform: uppercase; /* Rende il testo del pulsante tutto maiuscolo */
-    transition: background-color 0.3s, color 0.3s; /* Transizione per effetto hover */
-  }
-  
-  .explore-btn button:hover {
-    background-color: #8752dd; /* Cambia lo sfondo quando il mouse è sopra il pulsante */
-    color: #fff; /* Colore del testo rimane bianco anche al passaggio del mouse */
-  }
-  
-  
-  /* Media query per dispositivi mobili */
-  @media (max-width: 768px) {
-    .sidebar {
+/* Logo della sidebar */
+.sidebar-logo {
+  flex-shrink: 0;
+}
+
+/* Menu della sidebar */
+.menu {
+  padding: 0;
+  margin: 15vh 0 0 0;
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+}
+
+.menu li {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+}
+
+.menu a {
+  display: block;
+  padding: 10px 20px;
+  border: 2px solid var(--border-color);
+  background-color: rgba(0, 128, 0, 0.7);
+  border-radius: 8px;
+  color: var(--text-color);
+  font-weight: bold;
+  text-decoration: none;
+  transition: background-color 0.3s, color 0.3s;
+}
+
+.menu a:hover {
+  background-color: rgba(0, 128, 0, 0.9);
+  color: #fff;
+}
+
+/* Pulsante Esplora */
+.explore-btn {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: block;
+  z-index: 1500;
+}
+
+.explore-btn button {
+  width: 300px;
+  height: 100px;
+  padding: 15px 30px;
+  font-size: 18px;
+  background-color: #8752ddb0;
+  border: 2px solid #8752dd;
+  color: #fff;
+  border-radius: 8px;
+  font-weight: bold;
+  text-transform: uppercase;
+  transition: background-color 0.3s, color 0.3s;
+}
+
+.explore-btn button:hover {
+  background-color: #8752dd;
+  color: #fff;
+}
+
+
+
+/* Media query per dispositivi mobili */
+@media (max-width: 768px) {
+  .sidebar {
       width: 30%;
       height: 80vh;
-    }
-  
-    .sidebar .menu {
+      display: none;
+  }
+
+  .menu {
       margin-top: 30vh;
-    }
-  
-    .sidebar .menu a {
+  }
+
+  .menu a {
       padding: 8px 16px;
       border-radius: 15px;
-    }
-  
-    .explore-btn button {
+  }
+
+  .explore-btn button {
       padding: 8px 16px;
       font-size: 14px;
-    }
   }
-  
+
+
+}
