--- a/src/app/component/navbar/navbar.component.html
+++ b/src/app/component/navbar/navbar.component.html
@@ -17,7 +17,7 @@
       </div>
       <!-- Pulsante Contacts a destra -->
       <button class="btn btn-custom-static">
-        <a href="/contacts" class="text-decoration-none">Contacts</a>
+        <a href="/contacts" class="text-decoration-none" style="color: #04E762;">Contacts</a>
       </button>
     </div>
   </div>
