--- a/src/app/component/navbar/navbar.component.scss
+++ b/src/app/component/navbar/navbar.component.scss
@@ -40,8 +40,8 @@ body {
 }
 
 .btn-custom-static:hover {
-  background-color: #04E762; /* Colore di sfondo al passaggio del mouse */
-  color: #fff; /* Colore del testo al passaggio del mouse */
+  background-color: white; /* Colore di sfondo al passaggio del mouse */
+
 }
 
 /* Media query per dispositivi mobili */
