--- a/src/app/component/home/home.component.scss
+++ b/src/app/component/home/home.component.scss
@@ -18,7 +18,7 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    height: 80vh;
     text-align: start;
   }
   
@@ -173,9 +173,12 @@ body {
 
   /* Media query per dispositivi mobili */
   @media (max-width: 768px) {
+  
 
     #home {
-      margin: 15px;
+      margin-top: 20px;
+      margin-left: 15px;
+      margin-right: 15px;
     }
 
     #studies {
@@ -237,6 +240,7 @@ body {
     h3 {
       font-size: 18px;
     }
+
   .video-container {
     width: 100%;
     max-width: 100%;
@@ -245,5 +249,14 @@ body {
   video {
     width: 100%;
     height: auto;
+  }
+
+  .container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 90vh;
+    text-align: start;
   }
 }
