--- a/src/app/component/sidebar/sidebar.component.scss
+++ b/src/app/component/sidebar/sidebar.component.scss
@@ -16,7 +16,7 @@
   top: 100px;
   left: 16px;
   width: 300px;
-  height: 800px;
+  height: auto;
   border: 1px solid var(--border-color);
   border-radius: 4px;
   padding: 5px;
@@ -46,7 +46,6 @@
 .menu {
   padding: 0;
   margin: 15vh 0 0 0;
-  flex-grow: 1;
   display: flex;
   flex-direction: column;
 }
