--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -105,9 +105,8 @@
     }
   
     .theme-toggle {
-      top: 80px; /* 
-      z-index: 1000; /* Assicura che il toggle sia sopra gli altri elementi */
-  }
+      top: 80px; 
+    }
   }
 
   
