--- a/src/app/component/contacts/contacts.component.html
+++ b/src/app/component/contacts/contacts.component.html
@@ -5,7 +5,7 @@
             <h1 class="contact-title" style="color: #8752dd; text-align: start;">Contatti</h1>
         </div>
         
-        <section id="contact-details" class="my-5">
+        <div id="contact-details" class="my-5">
             <p>
                 Sono alla ricerca di nuove opportunità come <strong>Web Developer Full Stack</strong>. Sono aperto sia a ruoli nel <strong>backend</strong>, dove posso applicare la mia passione per la logica e l'ottimizzazione, sia nel <strong>frontend</strong>, dove poter esprimere la mia creatività estetica. <br> In sede o da remoto.
             </p>
@@ -15,13 +15,13 @@
             <p>
                 Se sei interessato a discutere di un progetto web, sono disponibile anche per consulenze e collaborazioni freelance. Non esitare a contattarmi per qualsiasi informazione o proposta.
             </p>
-            <ul style="list-style-type: none;">
-                <li><strong>Email:</strong> <a href="mailto:massimiliano@example.com">massimiliano&#64;example.com</a></li>
-                <li><strong>Telefono:</strong> +39 123 456 7890</li>
-                <li><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/massimiliano" target="_blank">linkedin.com/in/massimiliano</a></li>
-                <li><strong>GitHub:</strong> <a href="https://github.com/massimiliano" target="_blank">github.com/massimiliano</a></li>
-            </ul>
+            <div class="list">
+                    <p><strong>Email: </strong> <a href="mailto:massimiliano@example.com">massimilianodallamura&#64;hotmail.com</a></p>
+                    <p><strong>LinkedIn: </strong> <a href="https://www.linkedin.com/in/massimiliano" target="_blank">https://www.linkedin.com/in/massimiliano-dalla-mura-87b874138/</a></p>
+                    <p><strong>GitHub: </strong> <a href="https://github.com/massimiliano" target="_blank">https://github.com/MassimilianoDallaMura?tab=repositories</a></p>
+            </div>
             
-        </section>
+            
+        </div>
     </div>
 </div>
