--- a/src/app/component/footer/footer.component.html
+++ b/src/app/component/footer/footer.component.html
@@ -12,7 +12,7 @@
           <span><strong>About</strong></span>
         </a>
         <a routerLink="/cv" routerLinkActive="active" class="menu-item" id="home-link">
-          <span><strong>Download cv</strong></span>
+          <span><strong>Vedi CV</strong></span>
         </a>
       </nav>
     </footer>
