--- a/src/app/component/sidebar/sidebar.component.html
+++ b/src/app/component/sidebar/sidebar.component.html
@@ -7,9 +7,9 @@
   <div class="menu">
 
       <li><a routerLink="/works">Portfolio</a></li>
-      <li><a routerLink="/bio">About me</a></li>
-      <li><a routerLink="/contacts">Contacts</a></li>
-      <li><a routerLink="/cv">Download CV</a></li>
+      <li><a routerLink="/bio">Su di me</a></li>
+      <li><a routerLink="/contacts">Contatti</a></li>
+      <li><a routerLink="/cv">Vedi e scarica CV</a></li>
   </div>
 
 </div>
