--- a/src/app/component/works/works.component.html
+++ b/src/app/component/works/works.component.html
@@ -163,11 +163,11 @@
 
         <div class="d-flex justify-content-center align-items-center mt-3" style="margin-bottom: 100px;">
             <div class="text-center row d-flex">
-                <div class="col-sm-12 col-md-6 col-lg-6">
-                    <a href="https://matridg.com" target="_blank" class="btn btn-custom-static">View on GitHub</a>
+                <div class="col-6">
+                    <a href="https://portfolioenricogasparri.web.app" target="_blank" class="btn btn-custom-static">Vedi su GitHub</a>
                 </div>
-                <div class="col-sm-12 col-md-6 col-lg-6">
-                    <a href="https://github.com/project-link" target="_blank" class="btn btn-custom-git">Visit the website</a>
+                <div class="col-6">
+                    <a href="https://github.com/project-link" target="_blank" class="btn btn-custom-git">Visita il sito</a>
                 </div>
             </div>
         </div>
@@ -181,8 +181,10 @@
     <div id="matrimonio" class="project-item">
         <h2>// Wedding D+G</h2>
         <span class="badge badge-custom">Web app</span>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti, distinctio.</p>
+        <p>
+           
 
+        </p>
         <div class="badge-group">
             <span class="badge badge-tech angular">Angular</span>
             <span class="badge badge-tech java">Java</span>
@@ -192,7 +194,10 @@
 
         <div class="row d-flex" style="margin-bottom: 60px; justify-content: center; align-items: center;">
             <div class="col-sm-12 col-md-6 col-lg-6" style="justify-content: start;">
-                <p>È possibile cambiare tema: rispetto al classico tema dark/light, su richiesta del cliente è stata usata una tonalità alternativa al nero, per mantenere i toni allegri di un matrimonio</p>
+                <p>
+                    La web app è stata sviluppata utilizzando tecnologie come Angular per la parte frontend, Java per il backend e PostgreSQL come database 
+                    per gestire i dati degli invitati. 
+                </p>
             </div>
             <div class="col-sm-12 col-md-6 col-lg-6" style="text-align: center;">
                 <img src="../../../assets/matrimonio/1.png" alt="" width="100%">
@@ -200,7 +205,10 @@
 
         </div>
 
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti, distinctio.</p>
+        <p>
+            In base al ruolo dell'utente memorizzato nel database, la webapp mostra contenuti personalizzati e pertinenti. Gli amministratori possono accedere a funzionalità
+            come la gestione degli utenti e l'aggiunta di contenuti, mentre gli utenti possono compilare le proprie informazioni ed hanno accesso a contenuti informativi.
+        </p>
 
         <div class="row d-flex" style="margin-bottom: 60px; justify-content: center; align-items: center;">
             <div class="col-sm-12 col-md-6 col-lg-6 mb-3">
@@ -216,8 +224,10 @@
             
         <div class="row d-flex" style="margin-bottom: 60px; justify-content: center; align-items: center;">
             <div class="col-sm-12 col-md-6 col-lg-6 mb-3">
-                <p>È possibile cambiare tema: rispetto al classico tema dark/light, su richiesta del cliente è stata usata una tonalità alternativa al nero, per mantenere i toni allegri di un matrimonio</p>
-
+                <p>
+                    Tema personalizzato: a differenza dei classici temi dark/light, è stato implementato un tema con tonalità alternative al nero, 
+                    richiesto specificamente per mantenere un'atmosfera allegra e in linea con la celebrazione di un matrimonio.
+                </p>
             </div>
             <div class="col-sm-12 col-md-6 col-lg-6 mb-3" style="text-align: center;">
                 <video width="35%" height="auto" loop autoplay muted>
@@ -240,6 +250,17 @@
 
         </div>
 
+
+        <div class="row d-flex" style="margin-bottom: 60px; justify-content: center; align-items: center;">
+            <div class="col-sm-12 col-md-4 col-lg-6 mb-3">
+                <img src="../../../assets/matrimonio/10.png" alt="" width="100%">
+            </div>
+            <div class="col-sm-12 col-md-4 col-lg-6 mb-3">
+                <img src="../../../assets/matrimonio/12.png" alt="" width="100%">
+            </div>
+
+        </div>
+
         <p style="margin-bottom: 20px;">Un admin può aggiungere un invitato </p>
 
         <div class="row d-flex" style="margin-bottom: 60px; justify-content: center; align-items: center;">
@@ -255,15 +276,6 @@
 
         </div>
                       
-        <div class="row d-flex" style="margin-bottom: 60px; justify-content: center; align-items: center;">
-            <div class="col-sm-12 col-md-4 col-lg-6 mb-3">
-                <img src="../../../assets/matrimonio/10.png" alt="" width="100%">
-            </div>
-            <div class="col-sm-12 col-md-4 col-lg-6 mb-3">
-                <img src="../../../assets/matrimonio/12.png" alt="" width="100%">
-            </div>
-
-        </div>
 
         <p style="margin-bottom: 20px; margin-top: 20px;">e filtrare la lista degli invitati </p>
 
@@ -319,11 +331,11 @@
 
             <div class="d-flex justify-content-center align-items-center mt-3" style="margin-bottom: 100px;">
                 <div class="text-center row d-flex">
-                    <div class="col-sm-12 col-md-6 col-lg-6">
-                        <a href="https://github.com/project-link" target="_blank" class="btn btn-custom-static">View on GitHub</a>
+                    <div class="col-6">
+                        <a href="https://github.com/project-link" target="_blank" class="btn btn-custom-static">Vedi su GitHub</a>
                     </div>
-                    <div class="col-sm-12 col-md-6 col-lg-6">
-                        <a href="https://matridg.com" target="_blank" class="btn btn-custom-git">Visit the website</a>
+                    <div class="col-6">
+                        <a href="https://matridg.com" target="_blank" class="btn btn-custom-git">Visita il sito</a>
                     </div>
                 </div>
             </div>
@@ -380,7 +392,7 @@
             <div class="col-sm-12 col-md-6 col-lg-6 mb-3">
                 <img src="../../../assets/todo/bordi.png" alt="" width="80%">
              </div>
-             <div class="col-sm-12 row-col-md-6 col-lg-6s">
+             <div class="col-sm-12 row-col-md-6 col-lg-6">
                 <p>Quando tutti i task di uno user sono flaggati il bordo della card si colora di verde.</p>
              </div>
            
@@ -389,7 +401,7 @@
         
         <div class="d-flex justify-content-center align-items-center mt-3" style="margin-bottom: 100px;">
             <div class="text-center">
-                <a href="https://github.com/project-link" class="btn btn-custom">View on GitHub</a>
+                <a href="https://github.com/project-link" class="btn btn-custom">Vedi su GitHub</a>
             </div>
         </div>
 
