--- a/src/app/component/home/home.component.scss
+++ b/src/app/component/home/home.component.scss
@@ -59,16 +59,15 @@ body {
   
   /* Stile per le icone */
   .icon {
-    width: 40%; /* Adatta l'icona alla larghezza della colonna */
+    width: 50%; /* Adatta l'icona alla larghezza della colonna */
     height: auto; /* Mantiene le proporzioni dell'icona */
-    padding: 40px; /* Aggiunge uno spazio intorno all'icona */
+    padding: 20px; /* Aggiunge uno spazio intorno all'icona */
     border-radius: 8px; /* Arrotonda gli angoli dell'icona */
-  
   }
 
   /* Stile per il contenitore del pulsante */
 .btn-container {
-  width: 100%;
+  width: 60%;
   display: flex;
   justify-content: center; /* Centra orizzontalmente */
   align-items: center; /* Centra verticalmente */
@@ -198,13 +197,8 @@ body {
       max-width: 100%; /* Assicura che non superi il contenitore */
     }
     
-  
     .icon {
-      width: 100%; /* Adatta l'icona alla larghezza della colonna */
-      padding: 10px;
-      margin: 0;
-      border-radius: 8px; /* Arrotonda gli angoli dell'icona */
-    
+      width: 80%; /* Assicura che l'icona occupi tutta la larghezza della colonna */
     }
   
     .scopri {
